removed a line of CSS that was preventing the footer from displaying when the window was too short.

--- a/Web/Website/content/styles/structure/site.css
+++ b/Web/Website/content/styles/structure/site.css
@@ -38,7 +38,6 @@ form
     padding: 0px;
     margin: 0px;
     min-height: 100%;
-    height: 100%;
 }
 .horizontalCrossSection
 {
